--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ body {
 
 .header-logo-link {
     padding: 24px 0;
+    margin-right: 76px;
 }
 
 h1,
@@ -107,7 +108,6 @@ img {
     display: flex;
     gap: 40px;
     align-items: center;
-    margin-left: 76px;
 }
 
 .contacts-list {
@@ -155,10 +155,9 @@ img {
     color: var(--ocean);
 }
 
-.hero {
+.section.hero {
     background-color: var(--navyblue);
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding: 188px 0;
 }
 
 .hero-title {
@@ -168,7 +167,7 @@ img {
         font-weight: 700;
         line-height: 1.07;
         letter-spacing: 0.02em;
-        width: 496px;
+        max-width: 496px;
         margin-bottom: 48px;
         margin-right: auto;
         margin-left: auto;
@@ -189,6 +188,7 @@ img {
         margin-left: auto;
         margin-right: auto;
         padding: 16px 32px;
+        min-width: 169px;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -254,8 +254,7 @@ img {
 
 .section-team {
     background-color: var(--cloud);
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 120px 0;
 }
 
 .list-team {
@@ -271,8 +270,12 @@ img {
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
+
+.member-description {
+    padding: 32px 0;
+}
+
 .member-name {
-    margin-top: 32px;
     margin-bottom: 8px;
     text-align: center;
 }
@@ -283,8 +286,7 @@ img {
 
 .page-footer {
     background-color: var(--navyblue);
-    padding-bottom: 100px;
-    padding-top: 101.5px;
+    padding: 100px 0;
 }
 
 .footer-logo {
@@ -292,7 +294,8 @@ img {
 }
 
 .footer-logo-link {
-    margin-bottom: 17.5px;
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
 .footer-text {
@@ -303,8 +306,7 @@ img {
 }
 
 .section-portfolio {
-    padding-top: 96px;
-    padding-bottom: 120px;
+    padding: 96px 0 120px 0;
 }
 
 .portfolio-btn {
